objects/Vendor__c.object
<CustomObject>
    <fields>
        <fullName>CPP_Producer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPP Producer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPP_Supplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPP Supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>AF 	AFGHANISTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX 	ÅLAND ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL 	ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ 	ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS 	AMERICAN SAMOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD 	ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO 	ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI 	ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ 	ANTARCTICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG 	ANTIGUA AND BARBUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR 	ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM 	ARMENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW 	ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU 	AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT 	AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ 	AZERBAIJAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS 	BAHAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH 	BAHRAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD 	BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB 	BARBADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BY 	BELARUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE 	BELGIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ 	BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ 	BENIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM 	BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT 	BHUTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO 	BOLIVIA, PLURINATIONAL STATE OF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BQ 	BONAIRE, SINT EUSTATIUS AND SABA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA 	BOSNIA AND HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BW 	BOTSWANA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <externalId>true</externalId>
        <label>Import ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Adhesives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture/Fertilizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biofuels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Producers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elastomers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics - Circuit Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics - Semi Conductor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy - Oil Field Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy - Petroleum Refinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food - Flavor Extracts/Syrup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food - Food Preparations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Product - Pulp/Paper Mill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Products - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial - Misc. Mfg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paint &amp; Coatings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmaceutical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plating/Metal Finishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preservatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller/Subdistributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rubber &amp; Plastics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sealants</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OPP_CC_WS_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OPP CC WS Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPP_CC_WS_Current_Service_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OPP CC WS Current Service Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPP_CC_WS_Univar_Partner_TSDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OPP CC WS Univar Partner TSDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPP_GSE_Competitor_Producer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GS&amp;E Competitor&apos;s Producer Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPP_GSE_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GS&amp;E Competitor Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPP_GSE_Producer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GS&amp;E Producer Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPP_GSE_Supplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GS&amp;E Supplier Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPP_IC_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OPP IC Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPP_IC_Producer_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OPP IC Producer Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPP_MB_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OPP MB Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Port__c</fullName>
        <label>Port</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Vendor used on SKU Products that come from the UVX?</inlineHelpText>
        <label>SKU Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Request_Producer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sample Request Producer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Univar_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Univar Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vendors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Number__c</fullName>
        <description>UVX Vendor Number.  Exists only on vendors that Univar currently purchases from.</description>
        <externalId>true</externalId>
        <label>Vendor Number</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>